# cpp-opengl-normals-calc

./: .gitignore  CMakeLists.txt  README.md  gl1.cpp  main.cpp
include/: shader.h
res/shader/: Basic.shader  shader.frag  shader.vs
shaders/: shader.vert
